<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="user_hint">username</string>
    <string name="pswd_hint">password</string>
    <string name="welcome">Weather</string>
    <string name="button_login">Login</string>
    <string name="msg_error">Invalid username/password</string>
    <string name="title_activity_weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="location">Location</string>
</resources>
