<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.raparthiss.weatherapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/main_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />

    <EditText
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_user"
        android:layout_marginTop="29dp"
        android:hint="@string/user_hint"
        android:layout_below="@+id/main_header"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_pswd"
        android:layout_below="@+id/txt_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:hint="@string/pswd_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/button_login"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/txt_pswd"
        android:layout_alignLeft="@+id/main_header"
        android:layout_alignStart="@+id/main_header"
        android:onClick="checkAuth" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_error"
        android:layout_marginTop="35dp"
        android:text="@string/msg_error"
        android:layout_below="@+id/button_login"
        android:layout_centerHorizontal="true"
        android:textColor="#f90808"
        android:visibility="invisible" />

</RelativeLayout>
